--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "scripts": {
     "build": "rolldown -c",
     "dev": "rolldown -c -w",
-    "test": "echo \"Error: no test specified\""
+    "test": "pnpm build && vitest run",
+    "test:unit": "vitest run tests/unit",
+    "test:e2e": "pnpm build && vitest run tests/e2e"
   },
   "keywords": [],
   "author": "",
@@ -26,7 +28,10 @@
   },
   "devDependencies": {
     "@types/node": "^22.10.6",
+    "execa": "^8.0.1",
     "rolldown": "^0.15.0",
+    "tempy": "^3.1.0",
+    "vitest": "^2.1.5",
     "typescript": "^5.7.3"
   }
 }
