--- a/.github/workflows/autoPublish.yml
+++ b/.github/workflows/autoPublish.yml
@@ -13,7 +13,7 @@ on:
 
 permissions:
   contents: write
-  pull-requests: write
+  pull-requests: read
 
 # Do not allow multiple deployments simultaneously;
 # skip non-running, non-latest queue runs, and do not cancel running workflows
@@ -24,6 +24,9 @@ concurrency:
 jobs:
   publish:
     runs-on: ubuntu-latest
+    permissions:
+      id-token: write
+      contents: write
     environment: production
     steps:
       - name: 📋️ Checkout code
@@ -63,9 +66,12 @@ jobs:
       - name: 📦 Install dependencies
         if: steps.version_check.outputs.version_changed == 'true'
         run: pnpm i
-      - name: 🚀 Build & Publish Package
+      - name: 🏗 Build & Test
         if: steps.version_check.outputs.version_changed == 'true'
-        run: npm publish
+        run: pnpm run test
+      - name: 🚀 Publish Package
+        if: steps.version_check.outputs.version_changed == 'true'
+        run: npm publish --provenance --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
